Our Clients section done

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <!-- ================ Header End ============== -->
 
     <!-- ================ About Start ============== -->
-    <section class="about">
+    <section id="about">
         <h1 class="about__title">About Us</h1>
         
         <div class="container">
@@ -142,5 +142,22 @@
     </section>
     <!-- ================ About End ============== -->
 
+
+    <!-- ================ Contact Start ============== -->
+    <section id="clients">
+        <h1>Our Clients</h1>
+        <p class="lead">Wisdom new and valley answer. Contented it so is discourse recommend. Man its upon him call mile. An pasture he himself believe ferrars besides cottage.</p>
+        <div class="container clients__container">
+            <div><img src="./assets/Logo.png" alt="Logo"></div>
+            <div><img src="./assets/Logo-1.png" alt="Logo"></div>
+            <div><img src="./assets/Logo-2.png" alt="Logo"></div>
+            <div><img src="./assets/Logo-3.png" alt="Logo"></div>
+            <div><img src="./assets/Logo-4.png" alt="Logo"></div>
+            <div><img src="./assets/Logo-5.png" alt="Logo"></div>
+            <div><img src="./assets/Logo-6.png" alt="Logo"></div>
+            <div><img src="./assets/Logo-7.png" alt="Logo"></div>
+        </div>
+    </section>
+    <!-- ================ Contact End ============== -->
 </body>
 </html>
