--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./index.html#about">About</a></li>
                 <li><a href="./index.html#testimonials">Testimonials</a></li>
-                <li><a href="./contact.html">Contact</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         
             <a href="./index.html"><h3 class="nav__logo">SmartHome</h3></a>
@@ -228,9 +228,9 @@
                         <p class="faq__answer">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolor voluptate doloremque repellat, esse porro illum optio error nostrum deleniti unde. Beatae dolor magni culpa velit, id perspiciatis eveniet labore est.</p>
                     </div>
                 </article>
-                <article class="faq">
+                <article class="faq closed">
                     <div class="faq__top">
-                        <span class="faq__icon"><i class="bi bi-dash"></i></span>
+                        <span class="faq__icon"><i class="bi bi-plus"></i></span>
                         <h4 class="faq__question">How does this work ?</h4>
                     </div>
                     <div class="faq__bottom">
@@ -352,7 +352,7 @@
                     <li><a href="./index.html#about">About</a></li>
                     <li><a href="./index.html#testimonials">Testimonials</a></li>
                     <li><a href="./index.html#faqs">FAQ's</a></li>
-                    <li><a href="./contact.html">Contact</a></li>
+                    <li><a href="./index.html">Contact</a></li>
                 </ul>
             </div>
 
